# gppUnit

./: .gitignore  CMakeLists.txt
ApprovalsTest/: CMakeLists.txt  TextFileApprover.cpp
Matchers/: CMakeLists.txt  ContainerFormatter.h  MatcherResult.h  Matchers.h
TableFormatting/: CMakeLists.txt
gppUnit/: CMakeLists.txt
src/: CMakeLists.txt  Confirmation.cpp  ProjectContext.h
src/unix/: MethodTimer.cpp
test/: AutoRun.cpp  AutoRun.h  CMakeLists.txt  TestApprover.cpp  TestAutoMethodTimer.cpp  TestAutoTest.cpp  TestClassNameDocumentation.cpp  TestCollectionContains.cpp  TestColumnElements.cpp  TestCompositeNotification.cpp  TestConfirm.cpp  TestExceptionCatching.cpp  TestFileLogger.cpp  TestIsNull.cpp  TestLogicalMatchers.cpp  TestMethodTimers.h  TestNullMethodTimer.cpp  TestStartEndClass.cpp  TestStartEndMethod.cpp  TestStartEndProject.cpp  TestStreamNotification.cpp  TestSubStringMatching.cpp  TestTableFormatter.cpp  TestTableLineElements.cpp  TestTestCase.cpp  TestTestResult.cpp  TestTimedMethod.cpp  TestTypeInformation.cpp  TestUtilities.cpp  TestUtilities.h
